[package]
name = "wk"
version = "0.5.1-alpha.0"
description = "immutable development environment management cli"
license = "Apache-2.0/MIT"
repository = "https://github.com/qmx/wk"
homepage = "https://random.qmx.me"
authors = ["Douglas Campos <qmx@qmx.me>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
app_dirs = "1.2.1"
toml = "0.5.1"
serde_derive = "1.0.94"
serde = "1.0.94"
duct = "0.12.0"
whoami = "0.5.2"
directories = "2.0.1"
pathdiff = "0.1.0"
anyhow = "1.0.26"
